fixed margins on mobile

--- a/public/styles/navbar.scss
+++ b/public/styles/navbar.scss
@@ -121,7 +121,7 @@
   .navTextLogo {
     height: 85px;
     width: 120px;
-    margin-left: 0;
+    margin-left: 50px;
   }
 }
 
